Name:                Bug
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             OtherLicense
License-File:        LICENSE
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

Executable Bug
  hs-source-dirs: src
  main-is: Bug.hs

  Build-depends:
    -- corePackages (see [cabal2nix/src/Cabal2Nix/CorePackages.hs])
    base                      >= 4.4      && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    containers                >= 0.4,
    directory                 >= 1.1,
    filepath                  >= 1.3,
    old-locale                >= 1.0.0.5,

    -- Normal Packages
    errors,
    feed                      >= 0.3.9,
    ghcjs-base,
    ghcjs-dom,
    lens                      >= 4.9.1,
    mtl                       >= 2       && < 3,
    network                   >= 2.3,
    network-uri               >= 2.6,
    reflex,
    reflex-dom,
    text                      >= 0.11,
    time                      >= 1.5,
    transformers              >= 0.3

  ghc-options: -threaded -rtsopts -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans -fno-warn-unused-do-bind
